<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:id="@+id/fragment_home"
    tools:context=".home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Season End : -"
        android:id="@+id/tvSeason"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="12dp"
            android:src="@drawable/shopping_cart"
            android:background="@drawable/button_bg_round"
            android:layout_margin="10dp"
            android:id="@+id/ivShop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fbutton:cardCornerRadius="12dp"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:layout_gravity="bottom"
                fbutton:cardBackgroundColor="@color/fbutton_color_orange"
                android:id="@+id/cvCredit">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:textColor="@color/fbutton_color_sun_flower"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:shadowRadius="2"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center"
                        android:id="@+id/tvCredit"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/credit"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="12dp"
            android:layout_margin="10dp"
            android:src="@drawable/question"
            android:background="@drawable/button_bg_round"
            android:id="@+id/ivTutorial"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fbutton:cardCornerRadius="10dp"
                android:layout_marginHorizontal="10dp"
                android:elevation="5dp"
                android:layout_gravity="top"
                fbutton:cardBackgroundColor="@color/fbutton_color_silver"
                android:id="@+id/cvCoin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:textColor="@color/fbutton_color_sun_flower"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:shadowRadius="1"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center"
                        android:id="@+id/tvCoin"/>
                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/coin"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/puzzle"
            android:id="@+id/ivDailyPuzzle"
            android:elevation="5dp"
            android:padding="15dp"
            android:background="@drawable/button_bg_round"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="50dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="!"
            android:id="@+id/tvPuzzleInfo"
            android:background="@drawable/button_info"
            android:textColor="@color/colorWhite"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tambahin Aja"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:id="@+id/tvTitle"
        android:textSize="26sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:id="@+id/btnPrev"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/prev_button"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:id="@+id/btnRank"
                android:text="Rank"
                android:background="@drawable/button_rank"
                android:textColor="@color/colorWhite"
                android:textSize="26sp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:id="@+id/btnPractice"
                android:text="Practice"
                android:background="@drawable/button_practice"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:textSize="20sp"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:id="@+id/btnNext"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/next_button"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <info.hoang8f.widget.FButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Custom\nGame"
            android:id="@+id/btnCustomPlay"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:alpha="0.9"
            android:layout_margin="5dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/btnOnline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:alpha="0.9"
            android:text="Play\nOnline"
            android:textColor="@color/colorWhite" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <info.hoang8f.widget.FButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Play\nFriend"
            android:layout_weight="1"
            android:alpha="0.9"
            android:layout_margin="5dp"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnPlayFriend"/>


        <info.hoang8f.widget.FButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Leader\nBoard"
            android:layout_weight="1"
            android:alpha="0.9"
            android:layout_margin="5dp"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnLeaderboard"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>