...
                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_bg_round"
                    android:text="x"
                    android:textStyle="bold"
                    android:id="@+id/btnClose"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
...
